Improved fraud detection logic